@@ -4,7 +4,6 @@
 '.' denotes minor bug fixes
 
 Deprecated and liable to be removed in a future version:
- * 'reduce.fixed' and 'reduce.random' arguments (as of 2019-11-27)
  * buildjulia and assorted functions (as of 2020-02-04)
 
 1.6
@@ -18,6 +17,8 @@ Deprecated and liable to be removed in a future version:
   this option was already used explicitly with a different meaning, the old
   behavior remains as the new behavior doesn't make much sense if the user is
   specifying their own fitting function anyway.
+* Remove deprecated 'reduce.fixed' and 'reduce.random' arguments (deprecated
+  since 2019-11-27)
 . Fix an error in calculating Wald p-values for ANOVA F scores affecting ndf >1
 . Allow ddf='KR' as an abbreviation for ddf='Kenward-Roger'
 
